--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,6 @@
 {
   "compilerOptions": {
-    "types": [
-      "vitest/importMeta"
-    ],
+    "types": ["vitest/importMeta"],
     "target": "es2020",
     "module": "ES2022",
     "moduleResolution": "node",
@@ -14,18 +12,10 @@
     "strict": true,
     "skipLibCheck": true,
     "paths": {
-      "fake-external-lib": [
-        "./src/fake-external-lib/index"
-      ],
-      "fake-animation-lib": [
-        "./src/fake-animation-lib/index"
-      ],
-      "fake-animation-lib-solution": [
-        "./src/fake-animation-lib/index"
-      ]
+      "fake-external-lib": ["./src/fake-external-lib/index"],
+      "fake-animation-lib": ["./src/fake-animation-lib/index"],
+      "fake-animation-lib-solution": ["./src/fake-animation-lib/index"]
     }
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
